fix: align pay-and-feed content

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -599,7 +599,7 @@ header {
 }
 .pay-and-feed__content_align-right {
   align-self: flex-end;
-  margin: 60px 60px 47px 0;
+  margin: 60px 60px 51px 0;
 }
 .pay-and-feed__h2 {
   margin-bottom: 30px;
